k8s/running-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: running-deployment
spec:
  selector:
    matchLabels:
      app: running-app
  replicas: 1
  template:
    metadata:
      labels:
        app: running-app
    spec:
      volumes:
        - name: running-volume
          persistentVolumeClaim:
            claimName: ps-pvc
      containers:
      - name: running-app
        image: kozijakinfo/run-app:1.0
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /var/tmp/
            name: running-volume
