k8s/running-app-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: running-app-clusterip-svc
  namespace: running-namespace
spec:
  ports:
   - port: 8080
     targetPort: 8080
     protocol: TCP
  type: ClusterIP
  selector:
    app: running-app
